# tr-lang

./: .gitignore  Cargo.toml  LICENSE  README-TR.md  README.md  autoscript.yml  build.rs  install-trl.sh  install.py  install.sh  justfile  test.py
.github/workflows/: test-py.yml  test.yml
.rpm/: tr-lang.spec
highlight/: highlight.rs  package-lock.json  package.json  tsconfig.json
highlight/editors/vim/: LICENSE  tr-lang.vim
highlight/editors/vscode/tr-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
highlight/editors/vscode/tr-lang/snippets/: tr-lang.json
highlight/editors/vscode/tr-lang/syntaxes/: tr-lang.tmLanguage.json
highlight/hljs/: .prettierrc  LICENSE  README.md  package-lock.json  package.json
highlight/hljs/src/: tr-lang.js
highlight/hljs/src/languages/: tr-lang.js
highlight/hljs/test/: test.js
highlight/src/: trl-highlight.ts  trl-hl-rt.ts
highlight/src/test/: main.ts
src/: error.rs  ffi.rs  fmt.rs  interactive.rs  lib.rs  main.rs  store.rs  test.rs  util.rs  utilbin.rs
src/argsparser/: argsparse.rs  mod.rs
src/bytecode/: bytecode.rs  mod.rs
src/errwarn/: err.rs  errwarn.rs  mod.rs  warn.rs
src/highlight/: .prettierrc  package.json  tsconfig.json
src/highlight/editors/vim/: tr-lang.vim
src/highlight/src/: trl-highlight.ts  trl-hl-rt.ts
src/lexer/: lexer.rs  mod.rs
src/mem/: mem.rs  mod.rs  object.rs
src/parser/: mod.rs  parser.rs
src/runtime/: mod.rs  runtime.rs
src/token/: mod.rs  tokens.rs
tests/: block.trl  blocked_imports.trl  değişkenler.gnd  değişkenler.trl  factorial.gnd  factorial.trl  faktoriyel.gnd  faktoriyel.trl  giriş.trl  hello-world.trl  if-else.gnd  if-else.trl  ise-yoksa.gnd  ise-yoksa.trl  looping.gnd  looping.trl  mat.gnd  mat.trl  math.trl  merhaba-dünya.trl  mini-calc.trl  multiples_of_5_or_3.trl  order.trl  scope.trl  showcase.trl  tekrarlama.gnd  tekrarlama.trl  type-conv.trl  variables.gnd  variables.trl  vars.gnd
turlu/: .gitignore  Cargo.toml  turlu.yml
turlu/src/: lib.rs  main.rs  tester.rs
turlu/testler/: test-hello.trl  test-sına-fail.trl  test-sına.trl  test-varmap.trl
