[package]
name = "tr-lang"
version = "0.4.0-rc1"
edition = "2018"
authors = ["Kerem Göksu <superkerem13@gmail.com>"]
license = "MIT"
description = "A programming language made to bring syntax closer to Turkish"
homepage = "https://github.com/kaiserthe13th/tr-lang"
documentation = "https://tr-lang-docs.netlify.app/english/"
readme = "README.md"
repository = "https://github.com/kaiserthe13th/tr-lang"
keywords = ["programming-language", "lexer", "parser", "bytecode"]
categories = ["compilers"]
exclude = [
    "tests/*",
    "target/",
    "highlight/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
locale_config = "*"
cfg-if = "1.0"

[build-dependencies]
chrono = "0.4"

[package.metadata.rpm]
package = "tr-lang"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tr-lang = { path = "/usr/bin/tr-lang" }
