[package]
name = "tr-lang"
version = "0.4.0-rc3"
edition = "2018"
authors = ["Kerem Göksu <superkerem13@gmail.com>"]
license = "MIT"
description = "A programming language made to bring syntax closer to Turkish"
homepage = "https://github.com/kaiserthe13th/tr-lang"
documentation = "https://tr-lang-docs.netlify.app/english/"
readme = "README.md"
repository = "https://github.com/kaiserthe13th/tr-lang"
keywords = ["programming-language", "lexer", "parser", "bytecode"]
categories = ["compilers"]
exclude = [
    "tests/",
    "target/",
    "highlight/"
]

[lib]
name = "tr_lang"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "tr-lang"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
locale_config = "*"
cfg-if = "1.0"
rustyline = { version = "9.1.2", optional = true }
regex = { version = "1.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
interactive = ["rustyline", "regex", "lazy_static"]
default = ["interactive"]

[build-dependencies]
chrono = "0.4"

[package.metadata.rpm]
package = "tr-lang"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tr-lang = { path = "/usr/bin/tr-lang" }

