[package]
name = "turlu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trl_test"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tr-lang = { path = "..", default-features = false }
bunt = "0.2.6"
wax = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
same-file = "1"

